--- a/defaults/lang_en_US.properties
+++ b/defaults/lang_en_US.properties
@@ -1,2 +1,45 @@
 #--- INGAME ---
+MESSAGE_PREFIX=&b[PlayerWarpGUI]&f 
+COMMAND_NO_PERMISSION=&cNo permission for command >>&e {0}
+COMMAND_USE_INVALID=&cInvlaid command usage >>&e 
+
+COMMAND_USE_TOOMANY=to many arguments
+COMMAND_USE_SHOW=/pwarps show
+COMMAND_USE_LIST=/pwarps list
+COMMAND_USE_SET=/pwarps set <warp name>
+COMMAND_USE_DELETE=/pwarps delete <warp name>
+COMMAND_USE_TITLE=/pwarps title <title text>
+
+NEXTPAGE_TEXT=&aNext Page:
+
+
+TELEPORT_CANCEL_MOVEMENT=&ateleport Cancelled.
+TELEPORT_CANCEL_INVALID_LOCATION=&cTeleport cancelled, location is invalid.
+TELEPORT_CANCEL_UNSAFE_LOCATION=&cTeleport cancelled, location was unsafe to teleport to.
+TELEPORT_CANCEL_WORLD_BLOCKED=&cTeleport cancelled, warp not allowed in that world.
+TELEPORT_COMPLETED=&ateleport Completed.
+TELEPORT_COUNTDOWN=&ateleporting in: &6 {0}
+
+
+#CONSOLE LANG
+CONSOLE_MSG_COMMAND_ERROR=Cannot run command >> /{0} from console
+CONSOLE_MSG_METRICS=Starting Materics >> {0}
+CONSOLE_MSG_HOOK=Hooking {0} >> {1}
+CONSOLE_MSG_LANGUAGE_FILE=Loaded language file >> &a{0}
+CONSOLE_MSG_CONFIG_FILE=Loaded config file >> &a{0}
+CONSOLE_MSG_WARPFILE_COUNT=Loaded player warps files >> &a{0}
+CONSOLE_MSG_WARPS_COUNT=Loaded player warps >> &a{0}
+CONSOLE_MSG_PREFIX=[PlayerWarpGUI] 
+CONSOLE_MSG_FINAL=&aPlayerWarpGUI v.{0} >> {1}
+CONSOLE_MSG_CRITIAL_ERROR_PREFIX=&c[CRITICAL ERROR] 
+CONSOLE_MSG_NONCRITIAL_ERROR_PREFIX=&c[NON CRITICAL ERROR] 
+CONSOLE_MSG_CREATE_FOLDER=Creating warps directory >> &a\{0} 
+
+CONSOLE_ERROR_CRITIAL_FILENOTFOUND=Failed to load file >> {0}
+CONSOLE_NONCRITIAL_ERROR=Materics failed to start >> {0}
+CONSOLE_NONCRITIAL_ERROR_HOOK={0} was not found. Disabling {0} support.
+CONSOLE_CRITIAL_ERROR_HOOK={0} was not found. Cannot continue.
+
+SUCCESS=&aSuccess
+FAILED=&cFailed
 
