--- a/defaults/lang_en_US.properties
+++ b/defaults/lang_en_US.properties
@@ -6,11 +6,51 @@ COMMAND_USE_INVALID=&cInvlaid command usage >>&e
 COMMAND_USE_TOOMANY=to many arguments
 COMMAND_USE_SHOW=/pwarps show
 COMMAND_USE_LIST=/pwarps list
-COMMAND_USE_SET=/pwarps set <warp name>
-COMMAND_USE_DELETE=/pwarps delete <warp name>
-COMMAND_USE_TITLE=/pwarps title <title text>
+COMMAND_USE_ICON=/pwarps <warp name> seticon
+COMMAND_USE_SET=/pwarps setwarp <warp name>
+COMMAND_USE_DELETE=/pwarps <warp name> deletewarp
+COMMAND_USE_TITLE=/pwarps <warpname> title <title text>
+COMMAND_USE_LORE=/pwarps <warpname> setlore{0} <lore text>
+COMMAND_USE_BAN=/pwarps <warpname> ban or unban <playername>
 
-NEXTPAGE_TEXT=&aNext Page:
+COMMAND_LIST_TEXT=&aYour warps:&c 
+COMMAND_LIST_NONE_TEXT=&aYou don't have any warps set.  
+COMMAND_SET_COMPLETED_TEXT=&aWarp set completed.
+COMMAND_SET_ENOUGH_MONEY=&a{0} has been withdrawn as cost of setting warp.
+COMMAND_SET_NOT_ENOUGH_MONEY=&aYou dont have enough money to set this warp.
+COMMAND_SET_ALLREADY_EXSISTS_TEXT=&aA warp by this name already exists.
+COMMAND_SET_MAX_ALLOWED_TEXT=&aYou are not allowed to set more than {0} warps. 
+COMMAND_SET_CANCEL_UNSAFE_LOCATION=&cWarp set cancelled, unsafe location to set warp at.
+COMMAND_SET_CANCEL_WORLD_BLOCKED=&cWarp set cancelled, Not allowed to set warps in this world.. 
+
+COMMAND_UPDATE_TITLE_COMPLETED_TEXT=&eWarp title updated for warp: &a{0}
+COMMAND_UPDATE_TITLE_TOOLONG_TEXT=&aWarp title is too long.
+
+COMMAND_UPDATE_LORE_COMPLETED_TEXT=&eWarp lore updated for warp: &a{0}
+COMMAND_UPDATE_LORE_TOOLONG_TEXT=&aWarp title is too long.
+
+COMMAND_UPDATE_ICON_COMPLETED_TEXT=&eWarp title updated for warp: &a{0}
+COMMAND_UPDATE_ICON_NOICON_TEXT=&eUse must be holding a item to set a icon for.
+COMMAND_UPDATE_DOESNT_EXSISTS_TEXT=&aYou don't have a warp by that name.
+
+GRIEFPREVETION_NO_PERMISSION=No Permission in gp
+GRIEFPREVETION_NOT_IN_A_CLAIM=Warps can only be in claims.
+
+WORLDGUARD_NO_PERMISSION=No Permission in WG
+WORLGUARD_NOT_IN_A_REGION=Warps can only be in regions.
+
+REDPROTECT_NO_PERMISSION=No Permission in WG
+REDPROTECT_NOT_IN_A_REGION=Warps can only be in regions.
+
+COMMAND_BAN_UNKNOWN_PLAYER=Player unknown.....
+COMMAND_BANNED_PLAYER=&cYou cannot teleport here. You have been banned from this warp.
+COMMAND_BANNED_PLAYER_ALREADY=&cPlayer {0} is already banned from warp: {1}
+COMMAND_BANNED_PLAYER_NOTBANNED=&cPlayer {0} is not banned from warp: {1}
+COMMAND_BANNED_PLAYER_COMPLETED=&cPlayer {0} has been banned from your warp {1}.
+COMMAND_BANNED_PLAYER_UNBANNED_COMPLETED=&cPlayer {0} has been unbanned from your warp {1}.
+
+COMMAND_DELETE_WARP_TEXT=&a{0} Has been deleted.
+
 
 
 TELEPORT_CANCEL_MOVEMENT=&ateleport Cancelled.
@@ -20,6 +60,9 @@ TELEPORT_CANCEL_WORLD_BLOCKED=&cTeleport cancelled, warp not allowed in that wor
 TELEPORT_COMPLETED=&ateleport Completed.
 TELEPORT_COUNTDOWN=&ateleporting in: &6 {0}
 
+NEXTPAGE_TEXT=&aNext Page:
+WARP_ID_TEXT=&8Warp ID: 
+WARP_OWNER_TEXT=&8Warp Owner: &e
 
 #CONSOLE LANG
 CONSOLE_MSG_COMMAND_ERROR=Cannot run command >> /{0} from console
