Time for cleanup

--- a/defaults/lang_en_US.properties
+++ b/defaults/lang_en_US.properties
@@ -1,88 +1,155 @@
-#--- INGAME ---
-MESSAGE_PREFIX=&b[PlayerWarpGUI]&f 
-COMMAND_NO_PERMISSION=&cNo permission for command >>&e {0}
-COMMAND_USE_INVALID=&cInvlaid command usage >>&e 
+#Prefix that is displayed when a message is send to a player
+MESSAGE_PREFIX=&b[&3pWarps&b] 
 
-COMMAND_USE_TOOMANY=to many arguments
-COMMAND_USE_SHOW=/pwarps show
-COMMAND_USE_LIST=/pwarps list
-COMMAND_USE_ICON=/pwarps <warp name> seticon
-COMMAND_USE_SET=/pwarps setwarp <warp name>
-COMMAND_USE_DELETE=/pwarps <warp name> deletewarp
-COMMAND_USE_TITLE=/pwarps <warpname> title <title text>
-COMMAND_USE_LORE=/pwarps <warpname> setlore{0} <lore text>
-COMMAND_USE_BAN=/pwarps <warpname> ban or unban <playername>
+#//---------------------------------------------------------
+#// COMMANDS USES
+#//---------------------------------------------------------
+#Displayed when a player tries a command they dont have permission for {0} is replaced with the command tried.
+COMMAND_NO_PERMISSION=&cNo permission for command >>&3 {0}
+COMMAND_USE_INVALID=&bInvalid usage &r>> {0}
+COMMAND_USE_TOOMANY=&3opps, too many arguments &3:()
+COMMAND_USE_SHOW=&3/pwarp show
+COMMAND_USE_LIST=&3/pwarp list
+COMMAND_USE_ICON=&3/pwarp seticon <warp name>
+COMMAND_USE_SET=&3/pwarp setwarp <warp name>
+COMMAND_USE_DELETE=&3/pwarp deletewarp <warp name>
+COMMAND_USE_TITLE=&3/pwarp <warpname> title <title text>
+COMMAND_USE_LORE=&3/pwarp setlore <warpname> <lore text>
+COMMAND_USE_BAN=&3/pwarp ban/unban <warpname> <playername>
+COMMAND_USE_LANGUAGE_RELOAD=&3/pwarp langreload
 
-COMMAND_LIST_TEXT=&aYour warps:&c 
-COMMAND_LIST_NONE_TEXT=&aYou don't have any warps set.  
-COMMAND_SET_COMPLETED_TEXT=&aWarp set completed.
-COMMAND_SET_ENOUGH_MONEY=&a{0} has been withdrawn as cost of setting warp.
-COMMAND_SET_NOT_ENOUGH_MONEY=&aYou dont have enough money to set this warp.
-COMMAND_SET_ALLREADY_EXSISTS_TEXT=&aA warp by this name already exists.
-COMMAND_SET_MAX_ALLOWED_TEXT=&aYou are not allowed to set more than {0} warps. 
-COMMAND_SET_CANCEL_UNSAFE_LOCATION=&cWarp set cancelled, unsafe location to set warp at.
-COMMAND_SET_CANCEL_WORLD_BLOCKED=&cWarp set cancelled, Not allowed to set warps in this world.. 
+#//---------------------------------------------------------
+#// LIST COMMAND
+#//---------------------------------------------------------
+COMMAND_LIST_WARPS_TITLE=&3|------&b<&e Your pWarps &b>&3------|
+COMMAND_LIST_WARP_=&6Warp&7>>&e{1} &7- &6world&7>>&b{2} &6x&7>>&b{3} &6y&7>>&b{4} &6z&7>>&b{5}
+COMMAND_LIST_WARPS_DETAILS_TITLE=&3|------&b<&6 pWarp &f>> &e{0} &6 details &b>&3------|
+COMMAND_LIST_WARP_TITLE=&6Title&f>> &b{0}
+COMMAND_LIST_WARP_LOCATION=&6Location&f>> &3world&7>>&b{0} &3x&7>>&b{1} &3y&7>>&b{2} &3z&7>>&b{3}
+COMMAND_LIST_WARP_ICON=&6Icon&f>> &b{0}
+COMMAND_LIST_WARP_LORE_MAIN=&6Lore&f>>
+COMMAND_LIST_WARP_LORE=\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020&3lore{1}&f>> &b{0}
+COMMAND_LIST_WARP_BAN_MAIN=&6Bans&f>>
+COMMAND_LIST_WARP_BAN=\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020&b{0}
+COMMAND_LIST_NONE_TEXT=&cYou don't have any pWarps set.
 
-COMMAND_UPDATE_TITLE_COMPLETED_TEXT=&eWarp title updated for warp: &a{0}
-COMMAND_UPDATE_TITLE_TOOLONG_TEXT=&aWarp title is too long.
+#//---------------------------------------------------------
+#// SET COMMAND
+#//---------------------------------------------------------
+COMMAND_SET_COMPLETED_TEXT=&3Warp &b{0} &3has been set.
+COMMAND_SET_ENOUGH_MONEY=&3{0} &bhas been withdrawn as cost of setting pWarp.
+COMMAND_SET_NOT_ENOUGH_MONEY=&cYou dont have enough money to set this pWarp.
+COMMAND_SET_ALLREADY_EXSISTS_TEXT=&cA pWarp named &3{0} &3already exists.
+COMMAND_SET_MAX_ALLOWED_TEXT=&cYou are not allowed to set more than &3{0} &cpWarps. 
+COMMAND_SET_CANCEL_UNSAFE_LOCATION=&cWarp &3{0} &cset cancelled, unsafe location to set pWarp at.
+COMMAND_SET_CANCEL_WORLD_BLOCKED=&cWarp &3{0} &cset cancelled, Not allowed to set pWarp in this world.. 
 
-COMMAND_UPDATE_LORE_COMPLETED_TEXT=&eWarp lore updated for warp: &a{0}
-COMMAND_UPDATE_LORE_TOOLONG_TEXT=&aWarp title is too long.
+#//---------------------------------------------------------
+#// UPDATE COMMAND
+#//---------------------------------------------------------
+COMMAND_UPDATE_TITLE_COMPLETED_TEXT=&bpWarp &3{0} &btitle updated to: {1}
+COMMAND_UPDATE_TITLE_TOOLONG_TEXT=&3pWarp title is too long. Limited to &b{0} &3characters.
+COMMAND_UPDATE_LORE_COMPLETED_TEXT=&3pWarp &b{0} &3lore updated to: &b{1}
+COMMAND_UPDATE_LORE_TOOLONG_TEXT=&cpWarp title is too long. Limited to &b{0} &ccharacters.
+COMMAND_UPDATE_ICON_COMPLETED_TEXT=&3pWarp title updated for warp: &b{0}
+COMMAND_UPDATE_ICON_NOICON_TEXT=&cUse must be holding a item to set a icon for.
+COMMAND_UPDATE_DOESNT_EXSISTS_TEXT=&cYou don't have a pWarp named &b{0}
 
-COMMAND_UPDATE_ICON_COMPLETED_TEXT=&eWarp title updated for warp: &a{0}
-COMMAND_UPDATE_ICON_NOICON_TEXT=&eUse must be holding a item to set a icon for.
-COMMAND_UPDATE_DOESNT_EXSISTS_TEXT=&aYou don't have a warp by that name.
-
-GRIEFPREVETION_NO_PERMISSION=No Permission in gp
-GRIEFPREVETION_NOT_IN_A_CLAIM=Warps can only be in claims.
-
-WORLDGUARD_NO_PERMISSION=No Permission in WG
-WORLGUARD_NOT_IN_A_REGION=Warps can only be in regions.
-
-REDPROTECT_NO_PERMISSION=No Permission in WG
-REDPROTECT_NOT_IN_A_REGION=Warps can only be in regions.
-
-COMMAND_BAN_UNKNOWN_PLAYER=Player unknown.....
+#//---------------------------------------------------------
+#// BAN COMMAND
+#//---------------------------------------------------------
+COMMAND_BAN_UNKNOWN_PLAYER=&cPlayer unknown.....
 COMMAND_BANNED_PLAYER=&cYou cannot teleport here. You have been banned from this warp.
-COMMAND_BANNED_PLAYER_ALREADY=&cPlayer {0} is already banned from warp: {1}
-COMMAND_BANNED_PLAYER_NOTBANNED=&cPlayer {0} is not banned from warp: {1}
-COMMAND_BANNED_PLAYER_COMPLETED=&cPlayer {0} has been banned from your warp {1}.
-COMMAND_BANNED_PLAYER_UNBANNED_COMPLETED=&cPlayer {0} has been unbanned from your warp {1}.
+COMMAND_BANNED_PLAYER_ALREADY=&cPlayer &b{0} &cis already banned from warp: &b{1}
+COMMAND_BANNED_PLAYER_NOTBANNED=&cPlayer &b{0} &cis not banned from warp: &b{1}
+COMMAND_BANNED_PLAYER_COMPLETED=&3Player &b{0} &3has been banned from your warp: &b{1}.
+COMMAND_BANNED_PLAYER_UNBANNED_COMPLETED=&3Player &b{0} &3has been unbanned from your warp &b{1}.
 
-COMMAND_DELETE_WARP_TEXT=&a{0} Has been deleted.
+#//---------------------------------------------------------
+#// DELETE COMMAND
+#//---------------------------------------------------------
+COMMAND_DELETE_WARP_TEXT=&b{0} &3Has been deleted.
 
+#//---------------------------------------------------------
+#// LANGRELOAD  COMMAND
+#//---------------------------------------------------------
+COMMAND_LANGUAGE_RELOADED=&bLanguage file &3[{0}] &bhas been reloaded.
 
+#//---------------------------------------------------------
+#// TELEPORT EVENT MESSAGES
+#//---------------------------------------------------------
 
-TELEPORT_CANCEL_MOVEMENT=&ateleport Cancelled.
+TELEPORT_CANCEL_MOVEMENT=&cteleport Cancelled.
 TELEPORT_CANCEL_INVALID_LOCATION=&cTeleport cancelled, location is invalid.
 TELEPORT_CANCEL_UNSAFE_LOCATION=&cTeleport cancelled, location was unsafe to teleport to.
 TELEPORT_CANCEL_WORLD_BLOCKED=&cTeleport cancelled, warp not allowed in that world.
-TELEPORT_COMPLETED=&ateleport Completed.
-TELEPORT_COUNTDOWN=&ateleporting in: &6 {0}
+TELEPORT_COMPLETED=&3Teleport Completed.
+TELEPORT_COUNTDOWN=&3Teleporting in: &b{0}
 
-NEXTPAGE_TEXT=&aNext Page:
+#//---------------------------------------------------------
+#// GRIEFPREVENTION
+#//---------------------------------------------------------
+GRIEFPREVENTION_NO_PERMISSION=&cNo Permission in gp
+GRIEFPREVENTION_NOT_IN_A_CLAIM=&cpWarps can only be in claims.
+GRIEFPREVENTION_CLAIM_DELETED=&cYour pWarp &b{0} &chas been deleted, due to a claim been removed.
+
+#//---------------------------------------------------------
+#// WORLDGUARD
+#//---------------------------------------------------------
+WORLDGUARD_NO_PERMISSION=&cNo Permission in WG
+WORLGUARD_NOT_IN_A_REGION=&cpWarps can only be in regions.
+GRIEFPREVENTION_CLAIM_DELETED=&cYour pWarp &b{0} &chas been deleted, due to a claim been removed.
+
+#//---------------------------------------------------------
+#// REDPROTECT
+#//---------------------------------------------------------
+REDPROTECT_NO_PERMISSION=&cNo Permission in WG
+REDPROTECT_NOT_IN_A_REGION=&cpWarps can only be in regions.
+REDPROTECT_CLAIM_DELETED=&cYour pWarp &b{0} &chas been deleted, due to a region been removed.
+
+#//---------------------------------------------------------
+#// RESIDENCE
+#//---------------------------------------------------------
+RESIDENCE_NO_PERMISSION=&cNo Permission in RS
+RESIDENCE_NOT_IN_A_REGION=&cpWarps can only be in residence regions.
+RESIDENCE_CLAIM_DELETED=&cYour pWarp &b{0} &chas been deleted, due to a region been removed.
+
+#//---------------------------------------------------------
+#// FACTIONS
+#//---------------------------------------------------------
+FACTIONS_NO_PERMISSION=No Permission in Factions.
+FACTIONS_NOT_IN_A_REGION=pWarps can only be in faction regions.
+FACTIONS_CLAIM_DELETED=your pWarp {0} has been deleted, due to a region been removed.
+
+#//---------------------------------------------------------
+#// PWARP GUI
+#//---------------------------------------------------------
+NEXTPAGE_TEXT=&bNext Page:
 WARP_ID_TEXT=&8Warp ID: 
-WARP_OWNER_TEXT=&8Warp Owner: &e
+WARP_OWNER_TEXT=&3Warp Owner: &b
 
-#CONSOLE LANG
-CONSOLE_MSG_COMMAND_ERROR=Cannot run command >> /{0} from console
-CONSOLE_MSG_METRICS=Starting Materics >> {0}
-CONSOLE_MSG_HOOK=Hooking {0} >> {1}
+#//---------------------------------------------------------
+#// CONSOLE MESSAGES
+#//---------------------------------------------------------
+CONSOLE_MSG_COMMAND_ERROR=&7Cannot run command >> /&b{0} &7from console
+CONSOLE_MSG_METRICS=Starting Materics >> &b{0}
+CONSOLE_MSG_HOOK=Hooking &b{0} &7>> &b{1}
 CONSOLE_MSG_LANGUAGE_FILE=Loaded language file >> &a{0}
 CONSOLE_MSG_CONFIG_FILE=Loaded config file >> &a{0}
 CONSOLE_MSG_WARPFILE_COUNT=Loaded player warps files >> &a{0}
 CONSOLE_MSG_WARPS_COUNT=Loaded player warps >> &a{0}
-CONSOLE_MSG_PREFIX=[PlayerWarpGUI] 
+CONSOLE_MSG_PREFIX=&7[&bpWarps&7] 
 CONSOLE_MSG_FINAL=&aPlayerWarpGUI v.{0} >> {1}
 CONSOLE_MSG_CRITIAL_ERROR_PREFIX=&c[CRITICAL ERROR] 
 CONSOLE_MSG_NONCRITIAL_ERROR_PREFIX=&c[NON CRITICAL ERROR] 
 CONSOLE_MSG_CREATE_FOLDER=Creating warps directory >> &a\{0} 
-
 CONSOLE_ERROR_CRITIAL_FILENOTFOUND=Failed to load file >> {0}
 CONSOLE_NONCRITIAL_ERROR=Materics failed to start >> {0}
-CONSOLE_NONCRITIAL_ERROR_HOOK={0} was not found. Disabling {0} support.
-CONSOLE_CRITIAL_ERROR_HOOK={0} was not found. Cannot continue.
+CONSOLE_NONCRITIAL_ERROR_HOOK=&b{0} &cwas not found. Disabling &b{0} &csupport.
+CONSOLE_CRITIAL_ERROR_HOOK=&b{0} &cwas not found. Cannot continue.
 
+#//---------------------------------------------------------
+#// SUCCESS/FAILED IN CONSOLE
+#//---------------------------------------------------------
 SUCCESS=&aSuccess
 FAILED=&cFailed
-
